# chunk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ap.html  helloworld.cpp  patch.md  patch.yaml  patch1.yml  scat.txt
.github/workflows/: ci.yml
.scatwrap/: CHUNK.md  CMakeLists.txt  README.md  scat.txt
.scatwrap/docs/: CHUNK.md  CHUNK_en.md  CHUNK_ru.ROBOTS.md  CHUNK_ru.md  index.md
.scatwrap/src/: apply.cpp  apply.h  apply_chunk_v2.cpp  apply_chunk_v2.h  chunk_help.cpp  chunk_help.h  clipboard.cpp  clipboard.h  command.cpp  command.h  command_fabric.cpp  command_fabric.h  command_parse_helpers.cpp  command_parse_helpers.h  file_command_objects.cpp  file_command_objects.h  file_io.cpp  file_io.h  help.cpp  help.h  main.cpp  parser.cpp  parser.h  runner.cpp  runner.h  section.cpp  section.h  symbol_command_objects.h  symbol_commands.cpp  symbol_commands.h  symbols.cpp  symbols.h  symbols_py.cpp  text_command_objects.h  text_commands.cpp  text_commands.h  version.h
.scatwrap/src/app/: main.cpp
.scatwrap/src/commands/: append_text.hpp  command_base.hpp  create_file.hpp  delete_file.hpp  delete_text.hpp  insert_after_text.hpp  insert_before_text.hpp  prepend_text.hpp  replace_c_style_block.hpp  replace_cpp_class.hpp  replace_cpp_function.hpp  replace_cpp_method.hpp  replace_py_block.hpp  replace_py_class.hpp  replace_py_method.hpp  replace_text.hpp  replace_xml_block.hpp  symbol_utils.cpp  symbol_utils.h  text_utils.cpp  text_utils.h
.scatwrap/src/languages/: symbols.cpp  symbols.h  symbols_py.cpp
.scatwrap/src/yaml/: access.h  buffer.h  ctrdtr.h  error.h  expected.h  flat_map.h  hexascii.h  numconvert.h  string_ext.cpp  string_ext.h  trent.cpp  trent.h  trent_path.cpp  trent_path.h  unexpected.h  yaml.cpp  yaml.h
.scatwrap/tests/: apply.cpp  apply_symbols.cpp  apply_yaml.cpp  main.cpp  replace_py_block.cpp  replace_py_method_editorwindow.cpp  symbols.cpp  symbols_py.cpp  xml_block.cpp  yaml_parser.cpp
.scatwrap/tests/doctest/: doctest.h
.scatwrap/tests/guard/: .clang-format  .gitignore  README.md  check.h  env.h  example.cpp  guard.h  location.h  macro.h  util.h
docs/: CHUNK.md  CHUNK_en.md  CHUNK_ru.ROBOTS.md  CHUNK_ru.md  index.md
scatmap/: map.txt
src/: apply.cpp  apply.h  apply_chunk_v2.cpp  clipboard.cpp  clipboard.h  command.cpp  command.h  command_fabric.cpp  command_fabric.h  command_parse_helpers.cpp  command_parse_helpers.h  file_command_objects.cpp  file_command_objects.h  file_io.cpp  file_io.h  help.cpp  help.h  main.cpp  parser.cpp  parser.h  runner.cpp  runner.h  section.cpp  section.h  symbol_command_objects.h  symbol_commands.cpp  symbol_commands.h  text_command_objects.h  text_commands.cpp  text_commands.h  version.h
src/commands/: append_text.hpp  command_base.hpp  create_file.hpp  delete_file.hpp  delete_text.hpp  insert_after_text.hpp  insert_before_text.hpp  prepend_text.hpp  replace_c_style_block.hpp  replace_cpp_class.hpp  replace_cpp_function.hpp  replace_cpp_method.hpp  replace_py_block.hpp  replace_py_class.hpp  replace_py_method.hpp  replace_text.hpp  replace_xml_block.hpp  symbol_utils.cpp  symbol_utils.h  symbol_utils.hpp  text_utils.cpp  text_utils.h  text_utils.hpp
src/languages/: symbols.cpp  symbols.h  symbols_py.cpp
src/yaml/: yaml.cpp  yaml.h
tests/: apply.cpp  apply_symbols.cpp  apply_yaml.cpp  main.cpp  replace_py_block.cpp  replace_py_method_editorwindow.cpp  symbols.cpp  symbols_py.cpp  xml_block.cpp  yaml_parser.cpp
