<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>CMakeLists.txt</title>
</head>
<body>
<!-- BEGIN SCAT CODE -->
<br>
cmake_minimum_required(VERSION&nbsp;3.14)<br>
project(chunk&nbsp;LANGUAGES&nbsp;CXX)<br>
<br>
set(CMAKE_CXX_STANDARD&nbsp;17)<br>
set(CMAKE_CXX_STANDARD_REQUIRED&nbsp;ON)<br>
<br>
#&nbsp;Все&nbsp;исходники&nbsp;утилиты<br>
file(GLOB&nbsp;CHUNK_SOURCES&nbsp;CONFIGURE_DEPENDS<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/src/yaml/*.cpp<br>
)<br>
<br>
add_executable(chunk&nbsp;${CHUNK_SOURCES})<br>
target_include_directories(chunk&nbsp;PRIVATE<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/src<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/src/yaml<br>
)<br>
<br>
include(GNUInstallDirs)<br>
install(TARGETS&nbsp;chunk<br>
&nbsp;&nbsp;&nbsp;&nbsp;RUNTIME&nbsp;DESTINATION&nbsp;${CMAKE_INSTALL_BINDIR}<br>
)<br>
<br>
if&nbsp;(HAS_LIBSTDCXXFS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(chunk&nbsp;PRIVATE&nbsp;stdc++fs)<br>
endif()<br>
<br>
add_executable(chunk_tests<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/apply.cpp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/apply_yaml.cpp&nbsp;&nbsp;<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/main.cpp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/symbols_py.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/apply_symbols.cpp&nbsp;&nbsp;<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/symbols.cpp&nbsp;&nbsp;<br>
&nbsp;&nbsp;&nbsp;&nbsp;tests/yaml_parser.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/yaml/yaml.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/yaml/trent.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/yaml/trent_path.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/yaml/string_ext.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/symbols.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/symbols_py.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/apply_chunk_v2.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;src/chunk_help.cpp<br>
)<br>
target_include_directories(chunk_tests&nbsp;PRIVATE<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/src<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/src/yaml<br>
&nbsp;&nbsp;&nbsp;&nbsp;${CMAKE_CURRENT_SOURCE_DIR}/tests<br>
)<br>
<!-- END SCAT CODE -->
</body>
</html>
